@@ -14,6 +14,10 @@ S <mave> comment goes here
     'B' : means a BugFix
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
+    ==> 115 - 25/10/2006 <==
+
+C <mave> added random.h to includes presents in nnfw.h
+
     ==> 114 - 25/10/2006 <==
 
 C <mave> a little change in parsing <cluster> ;-)
